fix(ui:files): multiple overflow/alignment issues

--- a/app/public/tailwind.css
+++ b/app/public/tailwind.css
@@ -838,6 +838,12 @@
   .w-100 {
     width: calc(var(--spacing) * 100);
   }
+  .w-\[9\] {
+    width: 9;
+  }
+  .w-\[45\%\] {
+    width: 45%;
+  }
   .w-\[50\%\] {
     width: 50%;
   }
@@ -2528,6 +2534,12 @@
   }
   .break-all {
     word-break: break-all;
+  }
+  .whitespace-break-spaces {
+    white-space: break-spaces;
+  }
+  .whitespace-normal {
+    white-space: normal;
   }
   .whitespace-nowrap {
     white-space: nowrap;
@@ -4304,6 +4316,11 @@
       width: calc(2/3 * 100%);
     }
   }
+  .md\:w-50 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 50);
+    }
+  }
   .md\:w-64 {
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 64);
@@ -4312,6 +4329,11 @@
   .md\:w-\[50\%\] {
     @media (width >= 48rem) {
       width: 50%;
+    }
+  }
+  .md\:w-\[90\%\] {
+    @media (width >= 48rem) {
+      width: 90%;
     }
   }
   .md\:w-auto {
